dashboard: fix box-shadow since item was peaking behind header element

--- a/client/dashboard/Header.module.css
+++ b/client/dashboard/Header.module.css
@@ -6,7 +6,7 @@
   padding: 0 6px;
   width: calc(100% - 4px);
   padding: 0 6px;
-  box-shadow: 0 -6px #fafafa, 1px 1px 0 #fa0, 2px 2px 0 #fa0, 3px 3px 0 #fa0, 0 10px #fafafa !important;
+  box-shadow: 0 -6px #fafafa, 1px 1px 0 #fa0, 2px 2px 0 #fa0, 3px 3px 0 #fa0, 0 0 0 8px #fafafa !important;
 }
 
 .title {
